--- a/scripts/gh-pages.html
+++ b/scripts/gh-pages.html
@@ -5,6 +5,8 @@
   <link href="//fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i" rel="stylesheet" />
   <link href="//fonts.googleapis.com/css?family=Source+Code+Pro:400,300,200" rel="stylesheet" />
   <link href="//fonts.googleapis.com/css?family=Raleway:100,300" rel="stylesheet" />
+  <link href="//fonts.googleapis.com/css?family=Aref+Ruqaa" rel="stylesheet" />
+  <link href="//fonts.googleapis.com/css?family=Architects+Daughter" rel="stylesheet">
   <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <div id="app"></div>
